--- a/docker/hooks/build
+++ b/docker/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build --build-arg DOCKER_TAG=$DOCKER_TAG -t $IMAGE_NAME .
+docker build --build-arg DOCKER_TAG=$DOCKER_TAG -f $DOCKERFILE_PATH -t $IMAGE_NAME .
