--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,7 @@
 name: 'Trigger Docker Hub'
-# env:
-#    DOCKERHUB_WEBHOOK: ${{secrets.DOCKERHUB_WEBHOOK}}
-on: push
-  # schedule:
-  #   - cron: '0 21 * * 0'
+on:
+  schedule:
+    - cron: '0 21 * * 0'
 jobs:
   curl:
     runs-on: ubuntu-latest
