--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,3 +10,5 @@ jobs:
       uses: wei/curl@master
       with:
         args: -X POST ${{secrets.DOCKERHUB_WEBHOOK}}
+
+# to activate workflow on 2020/11/05
